# MarkitCppTemplate

./: CMakeLists.txt  README.md
cmakeModules/: FindDCL.cmake  FindSomeMarkitLibrary.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/modules/module_a/: CMakeLists.txt  ClassA.cpp  ClassA.h  Platform.h
src/modules/module_b/: CMakeLists.txt  ClassB.cpp  ClassB.h  Platform.h
test/src/modules/: CMakeLists.txt
test/src/modules/module_a/: CMakeLists.txt  TestModuleA.cpp
test/src/modules/module_b/: CMakeLists.txt  TestModuleB.cpp
